--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,19 @@
+* {
+    margin: 0;
+    padding: 0;    
+}
 html {
     font-size: 10px;
 }
-body,html {
-    margin: 0;
-    padding: 0;
+body, html {
     font-family: sans-serif;
 }
-.row {
+#container {
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     grid-gap: 0;
+    height: 100vh;
+    width: 100vw;
 }
 .gridsquare {
     background-color: rgba(83, 125, 92, 0.6);
