--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 * {
-    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 #main {
     height: 100vh;
-    background-color: #3F0E00;
+    background-color: #27619b;
     display: flex;
 }
 #container {
@@ -16,7 +17,7 @@
     margin-top: 60px;
     display: flex;
     flex-flow: column;
-    background-color: #8D2203;
+    background-color: rgb(158, 42, 10);
     border-radius: 5vh;
     box-shadow: .8vh .8vh 1vh .8vh rgba(0, 0, 0, 0.342);
 }
